@@ -260,6 +260,7 @@ The following cloud providers are supported:
 - Google Compute Engine (GCE)
 - https://www.qcloud.com/?lang=en[Tencent Cloud] (QCloud)
 - Alibaba Cloud (ECS)
+- Azure Virtual Machine
 
 The simple configuration below enables the processor.
 
@@ -364,6 +365,24 @@ ECS instance.
   }
 }
 -------------------------------------------------------------------------------
+
+_Azure Virtual Machine_
+
+[source,json]
+-------------------------------------------------------------------------------
+{
+  "meta": {
+    "cloud": {
+      "provider": "az",
+      "instance_id": "04ab04c3-63de-4709-a9f9-9ab8c0411d5e",
+      "instance_name": "test-az-vm",
+      "machine_type": "Standard_D3_v2",
+      "region": "eastus2"
+    }
+  }
+}
+-------------------------------------------------------------------------------
+
 
 [[add-locale]]
 === Add the local time zone
